# ismpc_walking

./: .gitignore  CMakeLists.txt  README.md  flake.nix
.github/workflows/: nix.yml
etc/: ismpc_walking.in.yaml  ismpc_walking.yaml
etc/robots/: hrp2_drc.yaml  hrp4.yaml  hrp4cr.yaml  hrp5_p.yaml  jvrc1.yaml  rhps1.yaml
include/: ControllerConfiguration.h  FootStepGenerator.h  ISMPC_Solver.h  MPC_state.h  Walking_controller.h  api.h
include/ismpc_walking/: ControllerConfiguration.h  FootTrajectory.h  ISMPC_Solver.h  MPC_state.h  Polygon.h  Walking_controller.h
src/: CMakeLists.txt  FootStepGenerator.cpp  FootTrajectory.cpp  GUI.cpp  ISMPC_Solver.cpp  Polygon.cpp  Walking_controller.cpp  joystick.cpp  lib.cpp  logs.cpp  move_feet.cpp  robot_state.cpp
src/joystick/: joystick.cc  joystick.hh
src/states/: CMakeLists.txt  Initial.cpp  Initial.h
